# GraphicsOpenGLAssignment

./: .gitignore  CMakeLists.txt  Main.cpp  OpenGLProjVS2022.vcxproj  OpenGLProjVS2022.vcxproj.filters  PolygonCube.sln  README.md  glad.c  packages.config
Libraries/include/glad/: glad.h
x64/Debug/: OpenGLProjVS2022.exe.recipe  OpenGLProjVS2022.vcxproj.FileListAbsolute.txt  PolygonCube.exe.recipe  PolygonCube.ilk  vc143.idb
x64/Debug/OpenGLProjVS2022.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLProjVS2022.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/PolygonCube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PolygonCube.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
